@@ -90,7 +90,8 @@ CONTRIBUTION GUIDELINES (FOR DEVELOPERS):
 ===> WHEN DEBUGGING / TESTING, LEAVE "$dev_debug_php_errors" IN "app-lib/php/init.php" SET 
 ===> LIKE SO, TO ALWAYS LOG ALL PARSE / FATAL PHP ERRORS DURING TESTING: (E_ERROR | E_PARSE)
 !!!!
-===> Test in a WebKit-based browser [Epiphany|Safari|Midori], and Firefox / Chromium.
+===> config.php (and plug-conf.php for plugins) MUST ONLY CONTAIN STATIC CONFIGS,
+===> as all configs are saved to / run from cache file: /cache/secured/ct_conf_XXXXXXXXX.dat
 !!!!
 ===> Use SQLite for data storage that needs query capability (PHPdesktop supports SQLite).
 !!!!                                                                                    
@@ -98,6 +99,8 @@ CONTRIBUTION GUIDELINES (FOR DEVELOPERS):
 ===> https://stackoverflow.com/questions/861254/iterate-over-properties-of-a-php-class
 !!!!
 ===> JS / CSS map file loading will timeout, if you load too many charts / news feeds.
+!!!!
+===> Test in a WebKit-based browser [Epiphany|Safari|Midori], and Firefox / Chromium.
 !!!!
 ===> Think over what other "FAQ page / TROUBLESHOOTING.txt" entries would be helpful.
 !!!!
